--- a/mblock/html/portfolio.html
+++ b/mblock/html/portfolio.html
@@ -54,7 +54,7 @@
             </div>
             <div class="board-main">
                 <div class="left">
-                    <img src="/images/mock4.png" alt="샘플 1">
+                    <img src="../images/mock4.png" alt="샘플 1">
                 </div>
                 <div class="right">
                     <h3>investment board title</h3>
