--- a/mblock/html/index.html
+++ b/mblock/html/index.html
@@ -19,7 +19,7 @@
             </h1>
             <nav>
                 <ul>
-                    <li><a href="#" onclick="location.href='index.html'">ome</a>
+                    <li><a href="#" onclick="location.href='index.html'">Home</a>
                         <div class="line"></div>
                     </li>
                     <li><a href="#" onclick="location.href='business.html'">Business</a>
