--- a/mblock/html/business.html
+++ b/mblock/html/business.html
@@ -27,7 +27,7 @@
                     <li><a href="#">Portfolio<i class="fa-solid fa-angle-down"></i></a>
                         <div class="dropdown">
                             <ul>
-                                <li><a href="#" onclick="location.href='portfolio.html'">News</a></li>
+                                <li><a href="#" onclick="location.href='news.html'">News</a></li>
                                 <li><a href="#" onclick="location.href='invest.html'">Investment</li>
                             </ul>
                         </div>
