--- a/mblock/html/contact.html
+++ b/mblock/html/contact.html
@@ -26,7 +26,7 @@
                     <li><a href="#">Portfolio<i class="fa-solid fa-angle-down"></i></a>
                         <div class="dropdown">
                             <ul>
-                                <li><a href="#" onclick="location.href='portfolio.html'">News</a></li>
+                                <li><a href="#" onclick="location.href='news.html'">News</a></li>
                                 <li><a href="#" onclick="location.href='invest.html'">Investment</li>
                             </ul>
                         </div>
@@ -36,7 +36,7 @@
                         <div class="dropdown">
                             <ul>
                                 <li><a href="#" onclick="location.href='announce.html'">공지사항</a></li>
-                                <li><a href="#" onclick="location.href='consulting.html'">QnA</a></li>
+                                <li><a href="#" onclick="location.href='consulting.html'">Consulting</a></li>
                                 <li><a href="#" onclick="location.href='contact.html'">Contact</a></li>
                             </ul>
                         </div>
