--- a/mblock/html/index.html
+++ b/mblock/html/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#">Portfolio<i class="fa-solid fa-angle-down"></i></a>
                         <div class="dropdown">
                             <ul>
-                                <li><a href="#" onclick="location.href='portfolio.html'">News</a></li>
+                                <li><a href="#" onclick="location.href='news.html'">News</a></li>
                                 <li><a href="#" onclick="location.href='invest.html'">Investment</a></li>
                             </ul>
                         </div>
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="more">
-                <p onclick="location.href='portfolio.html'">More</p>
+                <p onclick="location.href='news.html'">More</p>
                 <i class="fa-solid fa-angle-right"></i>
             </div>
         </div>
@@ -124,7 +124,7 @@
     <section id="associate">
         <div class="container">
             <div class="title">
-                <h2>Associate</h2>
+                <h2>Partners</h2>
             </div>
         </div>
     </section>
