--- a/mblock/html/invest.html
+++ b/mblock/html/invest.html
@@ -26,7 +26,7 @@
                         <div class="line"></div>
                         <div class="dropdown">
                             <ul>
-                                <li><a href="#" onclick="location.href='portfolio.html'">News</a></li>
+                                <li><a href="#" onclick="location.href='news.html'">News</a></li>
                                 <li><a href="#" onclick="location.href='invest.html'">Investment</a></li>
                             </ul>
                         </div>
