--- a/mblock/html/news.html
+++ b/mblock/html/news.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/portfolio.css">
+    <link rel="stylesheet" href="../css/news.css">
 </head>
 <body>
     <!-- header -->
@@ -26,7 +26,7 @@
                         <div class="line"></div>
                         <div class="dropdown">
                             <ul>
-                                <li><a href="#" onclick="location.href='portfolio.html'">News</a></li>
+                                <li><a href="#" onclick="location.href='news.html'">News</a></li>
                                 <li><a href="#" onclick="location.href='invest.html'">Investment</a></li>
                             </ul>
                         </div>
@@ -50,9 +50,9 @@
         <div class="container">
             <div class="title">
                 <h3>Portfolio</h3>
-                <h2>Investment Analyze Board</h2>
+                <h2>News</h2>
             </div>
-            <div class="board-main">
+            <!-- <div class="board-main">
                 <div class="left">
                     <img src="../images/mock4.png" alt="샘플 1">
                 </div>
@@ -61,7 +61,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa quod beatae placeat doloribus dicta minima. Provident accusamus fugiat ullam officia architecto cumque hic, soluta culpa, et in, pariatur dignissimos praesentium!</p>
                     <button>Learn more <i class="fa-solid fa-arrow-right"></i></button>
                 </div>
-            </div>
+            </div> -->
             <div class="board-con">
                 <div class="board-inner">
                     <div class="img">
