--- a/mblock/html/consulting.html
+++ b/mblock/html/consulting.html
@@ -74,6 +74,18 @@
                             <label for="phone">연락처</label>
                             <input type="tel" id="phone">
                         </div>
+                        <div class="select-menu">
+                            <div class="select-btn">
+                                <span class="sBtn-text">트레이더 선택</span>
+                                <i class="fa-solid fa-angle-down"></i>
+                            </div>
+                            <ul class="options">
+                                <li class="option"><span class="option-text">Moo</span></li>
+                                <li class="option"><span class="option-text">Su</span></li>
+                                <li class="option"><span class="option-text">Jung</span></li>
+                                <li class="option"><span class="option-text">Min</span></li>
+                            </ul>
+                        </div>
                         <div class="form-group">
                             <label for="content">상담 내용</label>
                             <textarea id="content"></textarea>
@@ -110,5 +122,7 @@
             </div>
         </div>
     </section>
+    <!-- javascript -->
+    <script src="../consult.js"></script>
 </body>
 </html>
