--- a/mblock/html/login.html
+++ b/mblock/html/login.html
@@ -35,7 +35,7 @@
                     <button>Log In</button>
                 </form>
                 <div class="line"></div>
-                <h3>Don't have M block Account?     <span><a href="#">Sign Up  </a><i class="fa-solid fa-arrow-right"></i></span></h3>
+                <h3>Don't have M block Account?     <span><a href="#" onclick="location.href='signup.html'">Sign Up  </a><i class="fa-solid fa-arrow-right"></i></span></h3>
             </div>
         </div>
     </main>
