--- a/mblock/html/news.html
+++ b/mblock/html/news.html
@@ -35,8 +35,8 @@
                         <div class="dropdown">
                             <ul>
                                 <li><a href="#" onclick="location.href='announce.html'">공지사항</a></li>
-                                <li><a href="#">Consulting</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="#" onclick="location.href='consulting.html'">Consulting</a></li>
+                                <li><a href="#" onclick="location.href='contact.html'">Contact</a></li>
                             </ul>
                         </div>
                     </li>
@@ -52,7 +52,7 @@
                 <h3>Portfolio</h3>
                 <h2>News</h2>
             </div>
-            <!-- <div class="board-main">
+            <div class="board-main">
                 <div class="left">
                     <img src="../images/mock4.png" alt="샘플 1">
                 </div>
@@ -61,7 +61,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa quod beatae placeat doloribus dicta minima. Provident accusamus fugiat ullam officia architecto cumque hic, soluta culpa, et in, pariatur dignissimos praesentium!</p>
                     <button>Learn more <i class="fa-solid fa-arrow-right"></i></button>
                 </div>
-            </div> -->
+            </div>
             <div class="board-con">
                 <div class="board-inner">
                     <div class="img">
