--- a/mblock/html/signup.html
+++ b/mblock/html/signup.html
@@ -49,7 +49,7 @@
                         <input type="tel" id="phone" autocomplete="off">
                     </div>
                     <div class="form-group">
-                        <label for="img">Profile Image</label>
+                        <label>Profile Image</label>
                         <input id="selectImg" type="file" hidden>
                         <div class="profile-img" onclick="defaultBtnActive()">
                             <img src="" alt="" >
