--- a/mblock/html/index.html
+++ b/mblock/html/index.html
@@ -53,7 +53,7 @@
             <p>Ride on highly trained team and huge amount of stack</p>
             <p>Within the best strategy and huge amount of stack,</p>
             <p>it will bring you amount of profits!</p>
-            <button class="start">Get Started</button>
+            <button class="start" onclick="location.href='admin_announce.html'">Get Started</button>
             <button class="down"><i class="fa-solid fa-angle-down"></i></button>
         </div>
     </main>
