--- a/mblock/html/admin_chat.html
+++ b/mblock/html/admin_chat.html
@@ -33,8 +33,15 @@
                         <li><div class="list" onclick="location.href='admin_chat.html'">단체 채팅</div></li>
                     </ul>
                 </div>
+                <div class="mid">
+                    <div class="chatArea">
+                        <i class="fa-solid fa-plus"></i>
+                        <input type="text">
+                        <i class="fa-solid fa-location-arrow"></i>
+                    </div>
+                </div>
                 <div class="right">
-                    <div class="title"><h2>단체 채팅</h2></div>
+
                 </div>
             </div>
         </div>
