--- a/mblock/html/admin_consult.html
+++ b/mblock/html/admin_consult.html
@@ -35,6 +35,45 @@
                 </div>
                 <div class="right">
                     <div class="title"><h2>개인 문의</h2></div>
+                    <div class="label">
+                        <div class="name">작성자</div>
+                        <div class="tit">상담 내용</div>
+                        <div class="trader">희망 Trader</div>
+                        <div class="date">작성 날짜</div>
+                        <div class="answer">답변 여부</div>
+                    </div>
+                    <div class="list">
+                        <ul>
+                            <li>
+                                <div class="name">작성자</div>
+                                <div class="tit" onclick="location.href='admin_consult_detail.html'">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto pariatur qui dicta mollitia ullam optio veniam quibusdam eaque impedit est laudantium praesentium, doloribus distinctio et consectetur voluptatum fuga sunt reprehenderit.</div>
+                                <div class="trader">Moo</div>
+                                <div class="date">2022-06-21</div>
+                                <div class="answer" style="color:#11998e">Y</div>
+                            </li>
+                            <li>
+                                <div class="name">작성자</div>
+                                <div class="tit">announce board title</div>
+                                <div class="trader">Jung</div>
+                                <div class="date">2022-06-21</div>
+                                <div class="answer">N</div>
+                            </li>
+                            <li>
+                                <div class="name">작성자</div>
+                                <div class="tit">announce board title</div>
+                                <div class="trader">Su</div>
+                                <div class="date">2022-06-21</div>
+                                <div class="answer">N</div>
+                            </li>
+                            <li>
+                                <div class="name">작성자</div>
+                                <div class="tit">announce board title</div>
+                                <div class="trader">Min</div>
+                                <div class="date">2022-06-21</div>
+                                <div class="answer">N</div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
