--- a/mblock/html/admin_news_add.html
+++ b/mblock/html/admin_news_add.html
@@ -60,6 +60,6 @@
             </div>
         </div>
     </main>
-    <script src="../add_news.js"></script>
+    <script src="../add_image.js"></script>
 </body>
 </html>
