--- a/mblock/html/admin_announce_add.html
+++ b/mblock/html/admin_announce_add.html
@@ -37,6 +37,15 @@
                     <div class="title"><h2>공지사항 작성</h2></div>
                     <form action="#">
                         <div class="form-group">
+                            <label>메인 이미지</label>
+                            <input id="selectImg" type="file" hidden>
+                            <div class="main-img" onclick="defaultBtnActive()">
+                                <img src="" alt="" >
+                                <i class="fa-solid fa-cloud-arrow-up"></i>
+                                select your image
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label for="title">제목</label>
                             <input type="text" id="title">
                         </div>
@@ -50,5 +59,6 @@
             </div>
         </div>
     </main>
+    <script src="../add_image.js"></script>
 </body>
 </html>
