--- a/mblock/html/admin_chat.html
+++ b/mblock/html/admin_chat.html
@@ -34,6 +34,61 @@
                     </ul>
                 </div>
                 <div class="mid">
+                    <div class="chatBox">
+                        <ul>
+                            <div class="date">2022년 06월 22일</div>
+                            <li>
+                                <div class="profile">
+                                    <img src="../images/profile2.jpg" alt="챗이미지">
+                                </div>
+                                <div class="chat">
+                                    <div class="name">Jung</div>
+                                    <ul>
+                                        <li>
+                                            <span>example chat1</span>
+                                        </li>
+                                        <li>
+                                            <span>example chat2</span>
+                                        </li>
+                                        <li>
+                                            <span>example chat3</span>
+                                        </li>
+                                    </ul>
+                                </div>                                
+                            </li>
+                            <li id="me">
+                                <div class="chat">
+                                    <ul>
+                                        <li>
+                                            <span>example chat1</span>
+                                        </li>
+                                        <li>
+                                            <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro, dignissimos asperiores. Dignissimos dolor debitis, quod dolorum nisi exercitationem illum excepturi quam corrupti! Aliquam, necessitatibus animi. Hic sed voluptates magnam praesentium.</span>
+                                        </li>
+                                    </ul>
+                                </div>                                
+                            </li>
+                            <li>
+                                <div class="profile">
+                                    <img src="../images/profile3.jpg" alt="챗이미지">
+                                </div>
+                                <div class="chat">
+                                    <div class="name">Su</div>
+                                    <ul>
+                                        <li>
+                                            <span>example chat1</span>
+                                        </li>
+                                        <li>
+                                            <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi sint inventore et fugit totam voluptas sed quidem, dicta dolorum ducimus laudantium aliquam earum nesciunt consequuntur magnam tempore, est, numquam nulla!</span>
+                                        </li>
+                                        <li id="chat-img">
+                                            <img src="../images/mock5.png" alt="">
+                                        </li>
+                                    </ul>
+                                </div>                                
+                            </li>
+                        </ul>
+                    </div>
                     <div class="chatArea">
                         <i class="fa-solid fa-plus"></i>
                         <input type="text">
@@ -41,7 +96,27 @@
                     </div>
                 </div>
                 <div class="right">
-
+                    <h4>Members</h4>
+                    <ul>
+                        <li>
+                            <div class="img">
+                                <img src="../images/profile1.jpg" alt="프로필 예시1">
+                            </div>
+                            <span>Moo</span>
+                        </li>
+                        <li>
+                            <div class="img">
+                                <img src="../images/profile2.jpg" alt="프로필 예시1">
+                            </div>
+                            <span>Jung</span>
+                        </li>
+                        <li>
+                            <div class="img">
+                                <img src="../images/profile3.jpg" alt="프로필 예시1">
+                            </div>
+                            <span>Su</span>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
