--- a/mblock/html/announce_detail.html
+++ b/mblock/html/announce_detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/announce.css">
+    <link rel="stylesheet" href="../css/announce_detail.css">
 </head>
 <body>
     <!-- header -->
@@ -60,40 +60,26 @@
                         <li  onclick="location.href='contact.html'">Contact</li>
                     </ul>
                 </div>
-            <div class="right">
-                <div class="right-head">
-                    <div class="head-title">제목</div>
-                    <div class="head-date">작성 날짜</div>
-                    <div class="head-num">조회수</div>
+                <div class="right">
+                    <h4>공지사항 제목</h4>
+                    <div class="info">
+                        <div class="img">
+                            <img src="../images/profile1.jpg" alt="공지사항이미지">
+                        </div>
+                        <div class="info-inner">
+                            <h5>Moo</h5>
+                            <div class="num">2022년 06월 22일 17:11</div>
+                            <div class="num">조회 131</div>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <img src="../images/gradient2.jpg" alt="공지사항이미지2">
+                        <div class="content-inner">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium, dolor, obcaecati soluta corrupti quas ullam quidem atque incidunt eaque esse neque nihil enim illo reiciendis error deserunt repellendus tempora? Maiores.
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione fugit qui nisi amet, provident minus ipsa exercitationem dolores eum aperiam ex nesciunt eaque id! Ea nesciunt quisquam aperiam ullam harum!
+                        </div>
+                    </div>
                 </div>
-                <ul>
-                    <li>
-                        <div class="content-title"><p onclick="location.href='announce_detail.html'">공지사항 제목</p> <div class="isNew">N</div></div>
-                        <div class="content-date">2022-06-14</div>
-                        <div class="content-num">113</div>
-                    </li>
-                    <li>
-                        <div class="content-title"><p>공지사항 제목</p> </div>
-                        <div class="content-date">2022-06-11</div>
-                        <div class="content-num">258</div>
-                    </li>
-                    <li>
-                        <div class="content-title"><p>공지사항 제목</p> </div>
-                        <div class="content-date">2022-06-10</div>
-                        <div class="content-num">198</div>
-                    </li>
-                    <li>
-                        <div class="content-title"><p>공지사항 제목</p> </div>
-                        <div class="content-date">2022-06-07</div>
-                        <div class="content-num">311</div>
-                    </li>
-                    <li>
-                        <div class="content-title"><p>공지사항 제목</p> </div>
-                        <div class="content-date">2022-06-01</div>
-                        <div class="content-num">45</div>
-                    </li>
-                </ul>
-            </div>
             </div>
         </div>
     </section>
