--- a/mblock/html/admin_chat.html
+++ b/mblock/html/admin_chat.html
@@ -56,7 +56,7 @@
                                     </ul>
                                 </div>                                
                             </li>
-                            <li id="me">
+                            <li class="me">
                                 <div class="chat">
                                     <ul>
                                         <li>
