--- a/mblock/html/admin_news.html
+++ b/mblock/html/admin_news.html
@@ -37,7 +37,7 @@
                     <div class="title"><h2>투자게시판 관리</h2></div>
                     <div class="control">
                         <button onclick="location.href='admin_news_add.html'">추가</button>
-                        <button>삭제</button>
+                        <button id="delete">삭제</button>
                     </div>
                     <div class="label">
                         <div class="check"></div>
@@ -85,9 +85,18 @@
                             </li>
                         </ul>
                     </div>
+                    <div class="modal">
+                        <div class="modal-content">
+                            <i class="fa-solid fa-xmark"></i>
+                            <strong>삭제하시겠습니까?</strong>
+                            <p>삭제 후 복구가 불가합니다</p>
+                            <div class="delete">삭제하기</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
+    <script src="../modal.js"></script>
 </body>
 </html>
