--- a/mblock/html/admin_partner.html
+++ b/mblock/html/admin_partner.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/admin_announce_add.css">
+    <link rel="stylesheet" href="../css/admin_partner.css">
 </head>
 <body>
     <!-- header -->
@@ -18,6 +18,7 @@
             </h1>
         </div>
     </header>
+    <!-- main -->
     <main>
         <div class="container">
             <div class="top">
@@ -35,31 +36,44 @@
                     </ul>
                 </div>
                 <div class="right">
-                    <div class="title"><h2>공지사항 작성</h2></div>
-                    <form action="#">
-                        <div class="form-group">
-                            <label>메인 이미지</label>
-                            <input id="selectImg" type="file" hidden>
-                            <div class="main-img" onclick="defaultBtnActive()">
-                                <img src="" alt="" >
-                                <i class="fa-solid fa-cloud-arrow-up"></i>
-                                select your image
-                            </div>
+                    <div class="title"><h2>협력사 관리</h2></div>
+                    <div class="control">
+                        <button onclick="location.href='admin_partner_add.html'">추가</button>
+                    </div>
+                    <ul>
+                        <li>
+                            <img src="../images/rok.JPG" alt="협력사이미지">
+                            <p>ROK CAPITAL</p>
+                            <button id="delete">삭제</button>
+                        </li>
+                        <li>
+                            <img src="../images/despread.png" alt="협력사이미지">
+                            <p>DeSpread</p>
+                            <button id="delete">삭제</button>
+                        </li>
+                        <li>
+                            <img src="../images/upbit.png" alt="협력사이미지">
+                            <p>Upbit</p>
+                            <button id="delete">삭제</button>
+                        </li>
+                        <li>
+                            <img src="../images/bithumb.png" alt="협력사이미지">
+                            <p>Bitumb</p>
+                            <button id="delete">삭제</button>
+                        </li>
+                    </ul>
+                    <div class="modal">
+                        <div class="modal-content">
+                            <i class="fa-solid fa-xmark"></i>
+                            <strong>삭제하시겠습니까?</strong>
+                            <p>삭제 후 복구가 불가합니다</p>
+                            <div class="delete">삭제하기</div>
                         </div>
-                        <div class="form-group">
-                            <label for="title">제목</label>
-                            <input type="text" id="title">
-                        </div>
-                        <div class="form-group">
-                            <label for="content">내용</label>
-                            <textarea id="content"></textarea>
-                        </div>
-                        <button>게시하기</button>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
-    <script src="../add_image.js"></script>
+    <script src="../modal.js"></script>
 </body>
 </html>
