--- a/mblock/html/admin_partner_add.html
+++ b/mblock/html/admin_partner_add.html
@@ -7,17 +7,18 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/admin_announce_add.css">
+    <link rel="stylesheet" href="../css/admin_partner_add.css">
 </head>
 <body>
     <!-- header -->
     <header>
-        <div class="container">
-            <h1>
-                <button onclick="location.href='index.html'">M <span>Block</button>
-            </h1>
-        </div>
-    </header>
+    <div class="container">
+        <h1>
+            <button onclick="location.href='index.html'">M <span>Block</button>
+        </h1>
+    </div>
+</header>
+    <!-- main -->
     <main>
         <div class="container">
             <div class="top">
@@ -35,10 +36,10 @@
                     </ul>
                 </div>
                 <div class="right">
-                    <div class="title"><h2>공지사항 작성</h2></div>
+                    <div class="title"><h2>협력사 추가</h2></div>
                     <form action="#">
                         <div class="form-group">
-                            <label>메인 이미지</label>
+                            <label>로고 이미지</label>
                             <input id="selectImg" type="file" hidden>
                             <div class="main-img" onclick="defaultBtnActive()">
                                 <img src="" alt="" >
@@ -47,12 +48,8 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="title">제목</label>
-                            <input type="text" id="title">
-                        </div>
-                        <div class="form-group">
-                            <label for="content">내용</label>
-                            <textarea id="content"></textarea>
+                            <label for="name">이름</label>
+                            <input type="text" id="name">
                         </div>
                         <button>게시하기</button>
                     </form>
