--- a/mblock/html/business.html
+++ b/mblock/html/business.html
@@ -98,6 +98,15 @@
                         <p>Head of Markets</p>
                     </div>
                 </div>
+                <div class="member-inner">
+                    <div class="img">
+                        <img src="../images/profile3.jpg" alt="샘플3">
+                    </div>
+                    <div class="content">
+                        <h3>Name</h3>
+                        <p>Head of Markets</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
