--- a/mblock/html/admin_news.html
+++ b/mblock/html/admin_news.html
@@ -51,7 +51,7 @@
                         <ul>
                             <li>
                                 <div class="check"><input type="checkbox"></div>
-                                <div class="tit">Investment board title</div>
+                                <div class="tit" onclick="location.href='admin_news_detail.html'">Investment board title</div>
                                 <div class="name">작성자</div>
                                 <div class="date">2022-06-21</div>
                                 <div class="fix">수정</div>
