--- a/mblock/html/business.html
+++ b/mblock/html/business.html
@@ -37,7 +37,7 @@
                             <ul>
                                 <li><a href="#" onclick="location.href='announce.html'">공지사항</a></li>
                                 <li><a href="#" onclick="location.href='consulting.html'">Consulting</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="#" onclick="location.href='contact.html'">Contact</a></li>
                             </ul>
                         </div>
                     </li>
@@ -61,6 +61,36 @@
             <div class="title">
                 <h2>About Us</h2>
             </div>
+            <div class="about-inner">
+                <div class="about-img">
+                    <img src="../images/knight.jpg" alt="about-image1">
+                </div>
+                <div class="about-content">
+                    <h4>Trading Team</h4>
+                    <h3>No .1</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, possimus quasi quisquam animi quas minima provident reiciendis qui ducimus excepturi beatae, unde quos cupiditate accusamus cumque omnis itaque, dolore quae.</p>
+                </div>
+            </div>
+            <div class="about-inner">
+                <div class="about-content">
+                    <h4>Analysis</h4>
+                    <h3>100 +</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, possimus quasi quisquam animi quas minima provident reiciendis qui ducimus excepturi beatae, unde quos cupiditate accusamus cumque omnis itaque, dolore quae.</p>
+                </div>
+                <div class="about-img">
+                    <img src="../images/megaphone.png" alt="about-image2">
+                </div>
+            </div>
+            <div class="about-inner">
+                <div class="about-img">
+                    <img src="../images/piggy.jpg" alt="about-image3">
+                </div>
+                <div class="about-content">
+                    <h4>Assets</h4>
+                    <h3>$1.0 B+</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, possimus quasi quisquam animi quas minima provident reiciendis qui ducimus excepturi beatae, unde quos cupiditate accusamus cumque omnis itaque, dolore quae.</p>
+                </div>
+            </div>
         </div>
     </section>
     <!-- members -->
@@ -68,7 +98,7 @@
         <div class="container">
             <div class="title">
                 <h2>Members</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus exercitationem laborum repudiandae nisi ipsum incidunt iusto.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus exercitationem laborum repudiandae nisi ipsum incidunt iusto.</p>
             </div>
             <div class="member-con">
                 <div class="member-inner">
@@ -98,15 +128,6 @@
                         <p>Head of Markets</p>
                     </div>
                 </div>
-                <div class="member-inner">
-                    <div class="img">
-                        <img src="../images/profile3.jpg" alt="샘플3">
-                    </div>
-                    <div class="content">
-                        <h3>Name</h3>
-                        <p>Head of Markets</p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -115,6 +136,26 @@
         <div class="container">
             <div class="title">
                 <h2>Partners</h2>
+            </div>
+            <div class="partner-list">
+                <ul>
+                    <li>
+                        <img src="../images/rok.JPG" alt="협력사이미지">
+                        <p>ROK CAPITAL</p>
+                    </li>
+                    <li>
+                        <img src="../images/despread.png" alt="협력사이미지">
+                        <p>DeSpread</p>
+                    </li>
+                    <li>
+                        <img src="../images/upbit.png" alt="협력사이미지">
+                        <p>Upbit</p>
+                    </li>
+                    <li>
+                        <img src="../images/bithumb.png" alt="협력사이미지">
+                        <p>Bitumb</p>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
