--- a/mblock/html/index.html
+++ b/mblock/html/index.html
@@ -126,6 +126,26 @@
             <div class="title">
                 <h2>Partners</h2>
             </div>
+            <div class="partner-list">
+                <ul>
+                    <li>
+                        <img src="../images/rok.JPG" alt="협력사이미지">
+                        <p>ROK CAPITAL</p>
+                    </li>
+                    <li>
+                        <img src="../images/despread.png" alt="협력사이미지">
+                        <p>DeSpread</p>
+                    </li>
+                    <li>
+                        <img src="../images/upbit.png" alt="협력사이미지">
+                        <p>Upbit</p>
+                    </li>
+                    <li>
+                        <img src="../images/bithumb.png" alt="협력사이미지">
+                        <p>Bitumb</p>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
     <!-- bottom -->
